feat(exception): How to implement exception advanced