@@ -2,19 +2,20 @@ package com.example.trello.exception;
 
 import com.example.trello.constants.ErrorCode;
 import com.example.trello.dto.response.AppResponse;
-import jakarta.servlet.http.HttpServletRequest;
-import org.springframework.http.HttpStatus;
+import jakarta.validation.ConstraintViolation;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 
 @RestControllerAdvice
 public class GlobalException {
+
+    private static final String MIN_ATTRIBUTE = "min";
 
     @ExceptionHandler(AppError.class)
     public ResponseEntity<AppResponse<Void>> appError(AppError e) {
@@ -33,9 +34,46 @@ public class GlobalException {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<AppResponse<Map<String, String>>> methodArgumentNotValidException(MethodArgumentNotValidException e) {
 
-        String message = e.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        FieldError fieldError = e.getBindingResult().getFieldErrors().getFirst();
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(new AppResponse<>(400, message));
+        ErrorCode errorCode;
+
+        var constraintViolation = e.getBindingResult().getFieldErrors().getFirst().unwrap(ConstraintViolation.class);
+
+
+        Map attributes = Map.of();
+
+        try {
+            errorCode = ErrorCode.valueOf(fieldError.getDefaultMessage());
+            attributes = constraintViolation.getConstraintDescriptor().getAttributes();
+        } catch (Exception ex) {
+            errorCode = ErrorCode.INVALID_EXCEPTION;
+        }
+
+
+        return ResponseEntity.status(errorCode.getStatus()).body(AppResponse.<Map<String, String>>builder()
+                .code(errorCode.getCode())
+                .timestamp(System.currentTimeMillis())
+                .message(Objects.nonNull(attributes) ? mapAttribute(errorCode.getMessage(), attributes) : errorCode.getMessage()).build());
+
+    }
+
+    private String mapAttribute(String message, Map<String, Object> params) {
+
+        if (params == null || params.isEmpty()) {
+            return message;
+        }
+
+        for (Map.Entry<String, Object> entry : params.entrySet()) {
+            String key = entry.getKey();
+            Object value = entry.getValue();
+
+            if (value != null) {
+                message = message.replace("{" + key + "}", Objects.toString(value));
+            }
+        }
+
+        return message;
     }
 
 
